--- a/Codename_Puck/app/src/main/AndroidManifest.xml
+++ b/Codename_Puck/app/src/main/AndroidManifest.xml
@@ -7,13 +7,22 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
-            android:name=".main_menu"
+            android:name=".splash"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".main_menu"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
             </intent-filter>
         </activity>
     </application>
