--- a/Codename_Puck/app/src/main/AndroidManifest.xml
+++ b/Codename_Puck/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
 
         <activity
-            android:name=".main_menu"
+            android:name=".receive"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
