--- a/Codename_Puck/app/src/main/AndroidManifest.xml
+++ b/Codename_Puck/app/src/main/AndroidManifest.xml
@@ -37,6 +37,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".comment"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".cameraActivity"
             android:label="@string/app_name"
 
